crates/figue/tests/integration/snapshots/main__integration__help__help_simple_struct.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 41
expression: "strip_ansi_escapes :: strip_str(& help)"
---
myapp 1.0.0

A sample CLI application for testing help generation.
This is a longer description that spans multiple lines
to test how doc comments are handled.

USAGE:
    myapp [OPTIONS] <INPUT> [OUTPUT]

ARGUMENTS:
        <INPUT>
            Input file to process
        <OUTPUT>
            Output file (optional)

OPTIONS:
    -v, --[no-]verbose
            Enable verbose output
    -j, --jobs <COUNT>
            Number of parallel jobs
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
