crates/figue/tests/integration/snapshots/main__integration__help__help_with_subcommands.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 125
expression: "strip_ansi_escapes :: strip_str(& help)"
---
git 2.40.0

Git-like CLI with subcommands

USAGE:
    git [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    clone
            Clone a repository
    log
            Show commit history
    remote
            Manage remotes
