crates/figue/tests/integration/snapshots/main__integration__help__nested_intermediate_repo_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 710
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main repo

Manage repositories

USAGE:
    main repo [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.

COMMANDS:
    clone
            Clone a repository
    push
            Push changes
