crates/figue/tests/integration/snapshots/main__integration__help__nested_subcommand_clone_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 658
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main repo clone

Clone a repository

USAGE:
    main repo clone [OPTIONS] <URL>

ARGUMENTS:
        <URL>
            Repository URL

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --depth <U32>
            Clone depth (shallow clone)
    -b, --branch <STRING>
            Branch to clone
