crates/figue/tests/integration/snapshots/main__integration__help__nested_subcommand_push_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 601
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main repo push

Push changes

USAGE:
    main repo push [OPTIONS] [REMOTE]

ARGUMENTS:
        <REMOTE>
            Remote name

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -f, --[no-]force
            Force push
