crates/figue/tests/integration/snapshots/main__integration__help__subcommand_install_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 295
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main install

Install a package

USAGE:
    main install [OPTIONS] <PACKAGE>

ARGUMENTS:
        <PACKAGE>
            Package name to install

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -g, --[no-]global
            Install globally
    -f, --[no-]force
            Force reinstall even if already installed
