crates/figue/tests/integration/snapshots/main__integration__help__subcommand_list_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 447
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main ls

List installed packages

USAGE:
    main ls [OPTIONS]

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.
    -a, --[no-]all
            Show all versions
        --[no-]json
            Output as JSON
