crates/figue/tests/integration/snapshots/main__integration__help__subcommand_remove_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 342
expression: "strip_ansi_escapes :: strip_str(& help)"
---
main rm

Remove a package

USAGE:
    main rm [OPTIONS] <PACKAGE>

ARGUMENTS:
        <PACKAGE>
            Package name to remove

OPTIONS:
    -h, --help
            Show help message and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
    -y, --yes
            Don't ask for confirmation
