crates/figue/tests/integration/snapshots/main__integration__help__tuple_variant_main_help.snap
---
source: crates/figue/tests/integration/help.rs
assertion_line: 222
expression: "strip_ansi_escapes :: strip_str(& help)"
---
myapp

USAGE:
    myapp [OPTIONS] <COMMAND>

OPTIONS:
    -h, --help
            Show help message and exit.
        --html-help
            Open HTML help in the browser and exit.
    -V, --version
            Show version and exit.
        --completions <bash,zsh,fish>
            Generate shell completions.
        --export-jsonschemas <DIR>
            Export JSON Schema files for all config roots.

COMMANDS:
    build
            Build the project
    test
            Run tests
